--- a/application/admin/view/layout/sidebar.html
+++ b/application/admin/view/layout/sidebar.html
@@ -1,25 +1,14 @@
 <li>
     <a href="#">
         <i class="fa fa-home"></i>
-        <span class="nav-label">主页1</span>
+        <span class="nav-label">logo管理</span>
         <span class="fa arrow"></span>
     </a>
     <ul class="nav nav-second-level">
         <li>
-            <a class="J_menuItem" href="index_v1.html" data-index="0">主页示例一</a>
+            <a class="J_menuItem" href="{:\\think\\Url::build('Index/logoSet')}" data-index="0">logo设置</a>
         </li>
-        <li>
-            <a class="J_menuItem" href="index_v2.html">主页示例二</a>
-        </li>
-        <li>
-            <a class="J_menuItem" href="index_v3.html">主页示例三</a>
-        </li>
-        <li>
-            <a class="J_menuItem" href="index_v4.html">主页示例四</a>
-        </li>
-        <li>
-            <a href="index_v5.html" target="_blank">主页示例五</a>
-        </li>
+       
     </ul>
 
 </li>
